# LolAudit

./: Pipfile  README.md  README_EN.md  README_JP.md  lol_audit.pyw  lol_audit_mac.spec  lol_audit_win.spec  main.py  pyproject.toml
.github/workflows/: auto-tag.yml  release.yml
assets/: lol_audit.icns
lolaudit/: __init__.py  lol_audit_app.py
lolaudit/config/: __init__.py  config_manager.py
lolaudit/core/: __init__.py  gameflow_manager.py  main_controller.py
lolaudit/exceptions/: __init__.py  gameflow_exceptions.py  matchmaking_exception.py  summoner_exceptions.py
lolaudit/lcu/: __init__.py  auth.py  champ_select_manager.py  gameflow_manager.py  league_client.py  lobby_manager.py  match_manager.py
lolaudit/lcu/league_client/: __init__.py  client_requester.py  client_web_socket.py  league_client.py
lolaudit/models/: __init__.py
lolaudit/models/entities/: config_entity.py  optional_model.py  summoner_info.py  update_info.py
lolaudit/models/entities/response/: matchmaking_info.py
lolaudit/models/enums/: config_keys.py  gameflow.py  matchmaking_state.py
lolaudit/ui/: __init__.py  lol_audit_ui.py  tray.py  ui.py  ui.ui
lolaudit/utils/: __init__.py  base_requester.py  log_config.py  requester.py  update_checker.py  web_socket.py
