[project]
name = "lolaudit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appdirs>=1.4.4",
    "psutil>=7.1.3",
    "pydantic>=2.12.5",
    "pyside6>=6.10.1",
    "requests>=2.32.5",
    "stringcase>=1.2.0",
    "urllib3>=2.6.0",
    "websocket-client>=1.9.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.17.0",
]

[dependency-groups]
dev = []